--- a/PortfolioPunteri/angular.json
+++ b/PortfolioPunteri/angular.json
@@ -27,9 +27,10 @@
               "src/assets"
             ],
             "styles": [
+              "PortfolioPunteri/node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": ["PortfolioPunteri/node_modules/bootstrap/dist/js/bootstrap.js"]
           },
           "configurations": {
             "production": {
